axum-debug/tests/fail/too_many_extractors.stderr
error: Handlers cannot take more than 16 arguments. Use `(a, b): (ExtractorA, ExtractorA)` to further nest extractors
  --> tests/fail/too_many_extractors.rs:5:5
   |
5  | /     e1: String,
6  | |     e2: String,
7  | |     e3: String,
8  | |     e4: String,
...  |
20 | |     e16: String,
21 | |     e17: String,
   | |________________^
